css/style.less
@import './iosevka.less';

@font-face {
  font-family: 'Font Awesome 5 Free Solid';
  font-style: normal;
  font-weight: 900;
  src: data-uri('data:font/woff2;base64', '../node_modules/@fortawesome/fontawesome-free-webfonts/webfonts/fa-solid-900.woff2') format('woff2');
}

.fa,
.fas {
  font-family: 'Font Awesome 5 Free Solid';
  font-weight: 900;
}


.fa, .fab, .fal, .far, .fas {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
}

.fa-times-circle:before {
  content: "\f057";
}

.fa-exclamation-triangle:before {
  content: "\f071";
}

@statusbar-height: 1.2rem;
@statusbar-background: lighten(#1b1d1e, 15%);
@gutter-lines-spacing: 0ch;
@font-family: iosevka web, menlo, consolas, Microsoft YaHei;
@line-height: 25px;
@font-size: 18px;

@ruler: 80ch;

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: @font-family;
  font-size: @line-height;
  font-variant-ligatures: common-ligatures;
  font-weight: 400;
  overflow: hidden;
}


.editor {
  user-select: none;
  height: 100%;
  font-size: @font-size;
  display: flex;
  flex-direction: column;
}

.buffers {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  overflow: hidden;
  position: relative;
}


.buffer {
  display: flex;
  position:absolute;
  box-sizing: border-box;
  overflow: hidden;
}

.view-border {
  position: absolute;
  background: #999;
  background-clip: padding-box;
  z-index: 2;
}

.border-ver {
  border-left: solid 5px transparent;
  border-right: solid 5px transparent;
  width: 2px !important;
  transform: translateX(-5px);
  cursor: ew-resize;
}

.border-hor {
  border-top: solid 5px transparent;
  border-bottom: solid 5px transparent;
  height: 2px !important;
  transform: translateY(-5px);
  cursor: ns-resize;
}

.lines-container {
  flex: 1;
  position: relative;
  will-change: transform;
}

.ruler {
  position: absolute;
  height: 100%;
  top: 0;
  left: @ruler;
  width: 1px;
}

.gutters:before, .gutters:after {
  display: block;
  content: '';
}

.gutters {
  display: flex;
  justify-content: space-between;
  z-index: 1;
}

.gutter {
  user-select: none;
  margin-right: @gutter-lines-spacing;
  position: relative;
  will-change: transform;
}

.relative-gutter {
  width: 2ch;
  opacity: 0.6;
}

.lines {
  position: relative;
}

.line, .line-number {
  white-space: pre;
  height: 1rem;
  line-height: 1rem;
}

.line {
  position: absolute;
}

.line-number {
  width: 100%;
  text-align: right;
}
.line-number-hole {
  text-align: left;
}

.absolute-gutter .line-number {
  position: absolute;
}

.line-number-highlight {
  color: yellow;
}

.lines-scrolling {
  position: relative;
}

.cursor {
  user-select: none;
  position: absolute;
  width: 1ch;
  opacity: 0.5;
  white-space: pre;
  height: 1rem;
  border-radius: 1px;
}

.matched-cursor {
  opacity: 0.3;
}

.cursor.cursor-not-active,
.matched-cursor.cursor-not-active {
  background: transparent;
  border: solid 1px red;
  box-sizing: border-box;
}

.guides {
  position: absolute;
  width: 100%;
  height: 100%;
}

.guide {
  position: absolute;
  white-space: pre;
}

.column-guide {
  height: 100%;
  width: 1ch;
  top: 0;
  opacity: 0.5;
}

.line-guide {
  height: 1rem;
  width: 100%;
  left: 0;
}


.status {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  height: @statusbar-height;
  white-space: pre;
  flex-grow: 0;
  flex-shrink: 1;
  position: relative;
}

.status.dirty .filename {
  opacity: 0.6;
}

.status > div:first-child {
  margin-left: @gutter-lines-spacing + 0.5ch;
}

.status > div {
  margin-left: 2ch;
}

.status .cursor {
  transform: translate(0.2ch, (@statusbar-height - 1) / 2);
  margin-left: 0.8ch;
}

.highlights div, .selections div, .lint div {
  height: 1rem;
  position: absolute;
}

.highlights div {
  filter: invert(30%);
}

.lint div {
  border-bottom: dotted 1px #d13b2e;
}

.lint.lint-warning div {
  border-bottom: dotted 1px orange;
}


.tip {
  white-space: pre-wrap;
  padding: 1ch;
  z-index: 1;
  position: absolute;
  border-radius: 2px;
  opacity: 0.9;
  max-height: 300px;
  overflow-y: scroll;
  transform: translateY(0.2rem);
}

.tip-content {
  font-size: 14px;
  white-space: pre;
}

.lint-status i {
  margin-left: 4px;
  margin-right: 4px;
}

.lint-status .highlight-errors-icon {
  color: #d13b2e;
}

.lint-status .highlight-warnings-icon {
  color: orange;
}

.lint-status span {
  margin-left: 4px;
  margin-right: 4px;
}


.status .status-right {
  margin-left: auto;
  display: flex;
  flex-direction: row;
}

.status-error, .status-info {
  background: #600929;
  color: #fff;
  padding-right: 0.5ch;
  padding-left: 0.5ch;
  border-radius: 2px;
}

.status-info {
  background: transparent;
  color: inherit;
}

.status-right > div {
  margin-right: 2ch;
}

.elm-overlay {
  font-size: 13px;
  z-index: 1000;
}

.elm-overlay .elm-mini-controls {
  bottom: @statusbar-height;
}


.auto-complete {
  position: absolute;
  border-radius: 2px;
  display: flex;
  flex-direction: column;
  overflow: auto;
  max-width: 100ch;
  transform: translateX(-1ch)
}

.auto-complete > div {
  padding: 0 1ch;
  line-height: 1rem;
}

.auto-complete .matched {
  font-weight: 700;
}

.auto-complete-ex {
  z-index: 2;
  bottom: @statusbar-height + 0.2;
}

.cursor-ime-active {
  width: 3px !important;
  opacity: 0.6;
}

.cursor-ime-composing {
  opacity: 1;
  background: none;
}

#hidden-input {
  height: 100%;
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding: 0 1ch 0 0;
  margin: 0;
  outline: none;
  border: none;
  font-size: inherit;
  font-family: inherit;
  color: inherit;
  white-space: pre;
  user-select: text;
  resize: none;
}

.overlay {
  position: absolute;
  z-index: 3;
}

